@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563
skinparam ArrowFontSize 9
skinparam nodesep 110
skinparam ranksep 130

left to right direction
hide circle
title ERD-12 - Notification Outbox và Delivery
caption ERD notification platform theo schema SQL-first hiện tại: outbox, preference, delivery attempt và reservation linkage.
skinparam linetype ortho
skinparam entity {
  BackgroundColor white
  BorderColor #374151
}

entity "users" as users {
  * user_id
    role_id
    full_name
    created_at
    updated_at
}

entity "notification_preferences" as notification_preferences {
  * notification_preference_id
    user_id
    channel
    is_enabled
    quiet_hours_start_minute
    quiet_hours_end_minute
    created_at
    updated_at
}

entity "reservations" as reservations {
  * reservation_id
    user_id
    branch_id
    status
    deposit_status
    created_at
    updated_at
}

entity "notification_outbox" as notification_outbox {
  * outbox_id
    channel
    recipient
    recipient_user_id
    template_key
    idempotency_key
    dedupe_key
    status
    attempt_count
    last_attempted_at
    next_retry_at
    related_reservation_id
    created_at
    sent_at
}

entity "notification_delivery_attempts" as notification_delivery_attempts {
  * attempt_id
    outbox_id
    channel
    provider_key
    attempt_number
    status
    recipient
    provider_message_id
    provider_status
    error_code
    attempted_at
    completed_at
    created_at
}

users ||--o{ notification_preferences : user_id
users |o--o{ notification_outbox : recipient_user_id
reservations |o--o{ notification_outbox : related_reservation_id
notification_outbox ||--o{ notification_delivery_attempts : outbox_id

@enduml





